--- a/SharpBlog.Client/Views/Blog/EditPost.cshtml
+++ b/SharpBlog.Client/Views/Blog/EditPost.cshtml
@@ -1,40 +1,44 @@
 ﻿@model SharpBlog.Client.ViewModels.PostFormViewModel
 @section scripts {
     <script src="~/lib/tinymce/tinymce.min.js"></script>
-    <script>
-        tinymce.init({
-            selector: '#post-content',
-            plugins: ['autosave', 'preview', 'searchreplace', 'visualchars', 'image', 'link', 'media', 'fullscreen', 'code', 'codesample', 'table', 'hr', 'pagebreak', 'autoresize', 'nonbreaking', 'anchor', 'insertdatetime', 'advlist', 'lists', 'textcolor', 'wordcount', 'imagetools', 'colorpicker'],
-            menubar: "edit view format insert table",
-            toolbar: 'formatselect | bold italic blockquote forecolor backcolor | imageupload link | alignleft aligncenter alignright  | numlist bullist outdent indent | fullscreen',
-            autoresize_bottom_margin: 0,
-            paste_data_images: true,
-            image_advtab: true,
-            file_picker_types: 'image',
-            relative_urls: false,
-            convert_urls: false,
-            branding: true
-        });
-    </script>
+    <script src="~/js/view.editpost.js"></script>
 }
+
 <div class="container">
     <div class="row">
         <div class="offset-2 col-8">
             <form asp-controller="Blog" asp-action="EditPost" method="post">
                 <input asp-for="Id" type="hidden" />
                 <div asp-validation-summary="All"></div>
-                <label asp-for="Title"></label>
-                <input asp-for="Title" />
-                <label asp-for="Content"></label>
-                <input asp-for="Content" type="text" id="post-content" />
-                <label asp-for="IsPublished"></label>
-                <input asp-for="IsPublished" />
-                <button type="submit">Save</button>
+                <div>
+                    <h1>
+                        <input asp-for="Title" placeholder="Title" class="transparent dashed" />
+                    </h1>
+                </div>
+                <div>
+                    <input asp-for="Content" type="text" id="post-content" />
+                </div>
+                <div>
+                    <input asp-for="Categories" name="Categories" type="text" placeholder="Categories" class="transparent dashed" />
+                </div>
+                <div class="alert-warning small" id="warning-dirty-post" hidden>
+                    Remember to save your changes.
+                </div>
+                <div class="mt-2">
+                    <div class="custom-control custom-switch float-left">
+                        <input asp-for="IsPublished" class="custom-control-input" />
+                        <label class="custom-control-label" for="IsPublished">Publish</label>
+                    </div>
+                    <button type="submit" class="btn btn-outline-success float-right">Save</button>
+                </div>
             </form>
-
+        </div>
+    </div>
+    <div class="row">
+        <div class="offset-2 col-8 pt-1">
             <form asp-controller="Blog" asp-action="DeletePost" method="post">
                 <input asp-for="Id" type="hidden" />
-                <button type="submit">DeletePost post</button>
+                <button type="submit" class="btn btn-outline-danger float-right">Delete</button>
             </form>
         </div>
     </div>
