--- a/SharpBlog.Client/Views/Shared/_Layout.cshtml
+++ b/SharpBlog.Client/Views/Shared/_Layout.cshtml
@@ -5,7 +5,6 @@
 @await Html.PartialAsync("~/Views/Shared/_Navbar.cshtml")
 <header class="main-header">
     <div class="container">
-        <div class="dimmed-layer"></div>
         <div class="row">
             <div class="offset-3 col-6 text-center">
                 <h1>Hi, I am Mark!</h1>
@@ -28,7 +27,7 @@
         </div>
     </div>
 </footer>
-<script src="~/js/site.js" asp-append-version="true"></script>
+<script type="module" src="~/js/site.js" asp-append-version="true"></script>
 @RenderSection("Scripts", required: false)
 </body>
 </html>
