--- a/SharpBlog.Client/Views/Blog/Category.cshtml
+++ b/SharpBlog.Client/Views/Blog/Category.cshtml
@@ -2,14 +2,11 @@
 @{
     ViewData["Title"] = "Home Page";
     <div class="container">
-        @if (Context.User.Identity.IsAuthenticated)
-        {
-        <div class="offset-2 col-8">
-            <h4 class="text-center">
-                <a href="/Blog/Category/unpublished">Show unpublished only</a>
-            </h4>
+        <div class="row">
+            <div class="offset-2 col-8">
+                <h4 class="text-center">Category: @ViewData["category"]</h4>
+            </div>
         </div>
-        }
         @foreach (var post in Model)
         {
             await Html.RenderPartialAsync("~/Views/Blog/_Post.cshtml", post);
