--- a/SharpBlog.Client/Views/Blog/EditPost.cshtml
+++ b/SharpBlog.Client/Views/Blog/EditPost.cshtml
@@ -19,7 +19,7 @@
                     <input asp-for="Content" type="text" id="post-content" />
                 </div>
                 <div>
-                    <input asp-for="Categories" name="Categories" type="text" placeholder="Categories" class="transparent dashed" />
+                    <input asp-for="Categories" name="Categories" type="text" placeholder="Categories" class="transparent dashed" autocomplete="off" />
                 </div>
                 <div class="alert-warning small" id="warning-dirty-post" hidden>
                     Remember to save your changes.
