--- a/SharpBlog.Client/Views/Account/Register.cshtml
+++ b/SharpBlog.Client/Views/Account/Register.cshtml
@@ -33,7 +33,7 @@
 
                                     <div asp-validation-summary="All" class="text-danger"></div>
 
-                                    <button class="btn btn-lg btn-primary btn-block btn-login text-uppercase font-weight-bold mb-2" type="submit">Sign in</button>
+                                    <button class="btn btn-lg btn-primary btn-block btn-login text-uppercase font-weight-bold mb-2" type="submit">Sign up</button>
                                 </form>
                             </div>
                         </div>
