--- a/SharpBlog.Client/Views/Shared/_Navbar.cshtml
+++ b/SharpBlog.Client/Views/Shared/_Navbar.cshtml
@@ -11,6 +11,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/Blog/EditPost">New post</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/Account/ManageAccount">Manage account</a>
+                        </li>
                     }
                 </ul>
                 @if (Context.User.Identity.IsAuthenticated)
