--- a/SharpBlog.Client/Views/Shared/_Head.cshtml
+++ b/SharpBlog.Client/Views/Shared/_Head.cshtml
@@ -1,18 +1,27 @@
-﻿<head>
+﻿@inject SharpBlog.Client.Services.ISettingsService settings
+@{
+    var host = $"{Context.Request.Scheme}://{Context.Request.Host}";
+}
+<head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Sharpapp</title>
-    <meta name="Description" content="I'm a C# enthusiast and .NET developer. Sharpapp.net is a website where I would like to share my work." />
-    <meta name="Keywords" content="Marek Łańduch, Marek, Łańduch, Landuch, Marek Landuch, sharpapp, sharpapp.net, sharp, beamer, wild, guns, windows, universal windows platform, uwp, programming, coder, software, web, developer" />
+    <title>@ViewData["BlogTitle"]</title>
+    <meta name="Description" content="@ViewData["BlogDescription"]" />
     <meta name="robots" content="index, follow" />
 
-    <meta property="og:title" content="Sharpapp" />
-    <meta property="og:description" content="I'm a C# enthusiast and .NET developer. Sharpapp.net is a website where I would like to share my work." />
+    <meta property="og:title" content="@ViewData["BlogTitle"]" />
+    <meta property="og:description" content="@ViewData["BlogDescription"]" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://www.sharpapp.net" />
-    <meta property="og:image" content="http://www.sharpapp.net/img/logo450.png" />
+    <meta property="og:url" content="@(host + Context.Request.Path)" />
+    <meta property="og:image" content="@(host + settings.GetLogoRelativeUrl())" />
+    <meta property="og:image:width" content="512" />
+    <meta property="og:image:height" content="512" />
 
+    <link rel="alternate" type="application/rss+xml" href="~/feed/rss/" title="@ViewData["BlogTitle"]" />
+    <link rel="alternate" type="application/atom+xml" href="~/feed/atom/" title="@ViewData["BlogTitle"]" />
+
+    <link rel="icon" type="image/png" sizes="16x16" href="@(host + @settings.GetIconRelativeUrl())" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300,800" rel="stylesheet" type="text/css">
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/twitter-bootstrap/css/bootstrap.css" />
