--- a/SharpBlog.Client/Views/Blog/Comment/_CommentForm.cshtml
+++ b/SharpBlog.Client/Views/Blog/Comment/_CommentForm.cshtml
@@ -16,9 +16,12 @@
             <div class="form-group">
                 <textarea asp-for="Content" class="form-control-lg" wrap="soft" placeholder="Comment" style="min-width: 100%"></textarea>
             </div>
-            <div class="form-group">
-                <div class="g-recaptcha" data-sitekey="@settings.GetReCaptchaPublicKey()"></div>
-            </div>
+            @if(settings.GetReCaptchaEnabled())
+            {
+                <div class="form-group">
+                    <div class="g-recaptcha" data-sitekey="@settings.GetReCaptchaPublicKey()"></div>
+                </div>
+            }
             <div asp-validation-summary="All" class="text-danger"></div>
             <button type="submit">Send</button>
         </form>
