Changed content width

--- a/SharpBlog.Client/Views/Account/ManageAccount.cshtml
+++ b/SharpBlog.Client/Views/Account/ManageAccount.cshtml
@@ -25,7 +25,7 @@
                                         <label for="inputEmail">Email</label>
                                     </div>
                                     <div asp-validation-summary="All" class="text-danger"></div>
-                                    <button class="btn btn-lg btn-primary btn-block btn-login text-uppercase font-weight-bold mb-2" type="submit">Submit</button>
+                                    <button class="btn btn-lg btn-primary btn-block btn-login text-uppercase font-weight-bold mb-2" type="submit">Update account details</button>
                                 </form>
                                 <p><a href="/Account/ChangePassword/">Change password</a></p>
                                 <p><a href="/">Back to blog</a></p>
