--- a/SharpBlog.Client/Views/Blog/Category.cshtml
+++ b/SharpBlog.Client/Views/Blog/Category.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SharpBlog.Core.Models.PostDto>
+﻿@model IEnumerable<SharpBlog.Common.Models.PostDto>
 <div class="container">
     <div class="row">
         <div class="offset-2 col-8">
