--- a/SharpBlog.Client/Views/Blog/Comment/_Comment.cshtml
+++ b/SharpBlog.Client/Views/Blog/Comment/_Comment.cshtml
@@ -1,4 +1,4 @@
-﻿@model SharpBlog.Core.Models.CommentDto
+﻿@model SharpBlog.Common.Models.CommentDto
 
 <div class="row">
     <div class="offset-2 col-8">
