--- a/SharpBlog.Client/Views/Blog/Index.cshtml
+++ b/SharpBlog.Client/Views/Blog/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SharpBlog.Core.Models.PostDto>
+﻿@model IEnumerable<SharpBlog.Common.Models.PostDto>
 @section scripts {
     <script src="~/lib/tinymce/tinymce.min.js"></script>
 }
