--- a/SharpBlog.Client/Views/Blog/_Post.cshtml
+++ b/SharpBlog.Client/Views/Blog/_Post.cshtml
@@ -1,4 +1,4 @@
-﻿@model SharpBlog.Common.Models.PostDto
+﻿@model SharpBlog.Core.Models.PostDto
 
 <div class="row">
     <div class="offset-1 col-10">
