--- a/SharpBlog.Client/Views/Shared/Error.cshtml
+++ b/SharpBlog.Client/Views/Shared/Error.cshtml
@@ -1,4 +1,4 @@
-﻿@model SharpBlog.Core.Models.ErrorViewModel
+﻿@model SharpBlog.Core.Dal.ErrorViewModel
 
 <h1 class="text-danger">Error.</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
